<resources>
    <string name="app_name">FirstJob</string>
    <string name="adress">Adress</string>
    <string name="send">Send</string>
    <string name="age">Age</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="your_application">Your Application</string>
    <string name="name">Name</string>
    <string name="go_back">Go Back</string>
    <string name="test1">test1</string>
    <string name="cv">CV</string>
    <string name="item_default_name">Nom de l\'article</string>
    <string name="item_default_price">0€</string>
    <string name="contenu_de_l_annonce">Contenu de l\'annonce</string>
    <string name="titre_de_l_annonce">Titre de l\'annonce</string>
</resources>