<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".FormActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:backgroundTint="#2B2D42"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="#8D99AE" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:backgroundTint="#2B2D42"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textColor="#8D99AE" />

            <EditText
                android:id="@+id/age"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:backgroundTint="#2B2D42"
                android:hint="@string/age"
                android:inputType="number"
                android:textColor="#8D99AE" />

            <EditText
                android:id="@+id/location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:backgroundTint="#2B2D42"
                android:hint="@string/adress"
                android:inputType="textPostalAddress"
                android:textColor="#8D99AE" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:backgroundTint="#2B2D42"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#8D99AE" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:backgroundTint="#2B2D42"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textColor="#8D99AE" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:elevation="4dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/send"
                android:textColor="#fff"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>